# stl_reader

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  colcon.pkg  package.xml  run_doxygen.sh  stl_reader.h
.github/workflows/: ubuntu-tests.yml
cmake/: Config.cmake.in
docs/: annotated.html  classes.html  classstl__reader_1_1StlMesh-members.html  classstl__reader_1_1StlMesh.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  menudata.js  stl__reader_8h.html  stl__reader_8h_source.html  stl_reader.dconf
docs/doxygen_config/: stl_reader.dconf
docs/html/: files.html  globals_defs.html  graph_legend.html  index.html  stl__reader_8h.html
include/stl_reader/: stl_reader.h
tests/: CMakeLists.txt  read_stl.t.cpp  remove_doubles.t.cpp  utils.cpp  utils.h
tests/data/: ascii_empty.stl  ascii_sphere.stl  binary_sphere.stl  empty_binary.stl  face_no_normal.stl  missing_begin_face.stl  missing_end_face.stl
